edit the layout

--- a/index.html
+++ b/index.html
@@ -79,7 +79,40 @@
     </section>
 
 
-    <section class="card-section" id="features"></section>
+    <section class="card-section" id="features">
+        <div class="continer card-continer">
+            <div class="card mb-3">
+                <div class="row g-0">
+                  <div class="col-md-6 img-holder">
+                    <img src="images/first-card.png" class="img-fluid rounded-start" alt="firstcardimg">
+                  </div>
+                  <div class="col-md-6">
+                    <div class="card-body">
+                      <h2 class="card-title">Tonic</h2>
+                      <p class="CANPOY">CANPOY <span><i class="fa-solid fa-circle"></i></span> <span> Back End Developer</span> <span><i class="fa-solid fa-circle"></i></span> 2022<span></span></p>
+                      <p class="card-text">A daily selection of privately personalized reads; no accounts or sign-ups required.</p>
+                      <div class="tags">
+                          <div class="tag">
+                              <p>html</p>
+                          </div>
+                          <div class="tag">
+                              <p>CSS</p>
+                          </div>
+                          <div class="tag">
+                              <p>javaScript</p>
+                          </div>
+                      </div>
+                      <div class="action">
+                          <button type="button" class="btn btn-outline-primary">See Project</button>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+              
+        </div>
+    </section>
 
 
      
