editing all content

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="container-fluid">
             <nav class="navbar navbar-expand-lg navbar-dark">
                 <a class="navbar-brand" href="">My Logo</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
@@ -44,10 +44,10 @@
             </nav>
 
             <!-- title -->
-            <div class="row">
-                <div class="col-lg-6">
-                    <h1 class="big-header">I’m Alzubair
-                        Glad to see you!</h1>
+            <div class="row title-section1">
+                <div class="col-lg-12">
+                  <h1 class="big-header">I’m Alzubair <br><span>Glad to see you!</span></h1>
+                    
                     <h2 class="second-header">I’m a software developer! I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hestiate to contact me.</h2>
                     <a class="lets-connect" href="">Lets Connect</a>
                     <div class="social-buttons">
@@ -104,7 +104,7 @@
                           </div>
                       </div>
                       <div class="action">
-                          <button type="button" class="btn btn-outline-primary">See Project</button>
+                          <button type="button" class="btn btn-outline-primary" >See Project</button>
                       </div>
                     </div>
                   </div>
@@ -113,14 +113,11 @@
 <!-- Card 2-->
               <div class="card mb-3">
                 <div class="row g-0">
-                  <div class="col-md-6 img-holder">
-                    <img src="images/first-card.png" class="img-fluid rounded-start" alt="firstcardimg">
-                  </div>
                   <div class="col-md-6">
                     <div class="card-body">
-                      <h2 class="card-title">Tonic</h2>
-                      <p class="CANPOY">CANPOY <span><i class="fa-solid fa-circle"></i></span> <span> Back End Developer</span> <span><i class="fa-solid fa-circle"></i></span> 2022<span></span></p>
-                      <p class="card-text">A daily selection of privately personalized reads; no accounts or sign-ups required.</p>
+                      <h2 class="card-title">Multi-Post Stories</h2>
+                      <p class="CANPOY">FACEBOOK <span><i class="fa-solid fa-circle"></i></span> <span> Back End Developer</span> <span><i class="fa-solid fa-circle"></i></span> 2022<span></span></p>
+                      <p class="card-text">Experimental content creation feature that allows users to add to an existing story over the course of a day without spamming their friends.</p>
                       <div class="tags">
                           <div class="tag">
                               <p>html</p>
@@ -129,28 +126,33 @@
                               <p>CSS</p>
                           </div>
                           <div class="tag">
-                              <p>javaScript</p>
+                              <p>Ruby on rails</p>
                           </div>
+                          <div class="tag">
+                            <p>javaScript</p>
+                        </div>
                       </div>
                       <div class="action">
                           <button type="button" class="btn btn-outline-primary">See Project</button>
                       </div>
                     </div>
                   </div>
+                  <div class="col-md-6 img-holder">
+                    <img src="images/second-card.png" class="img-fluid rounded-start" alt="firstcardimg">
+                  </div>
                 </div>
               </div>
-
 <!-- Card 3-->
-            <div class="card mb-3">
-              <div class="row g-0">
+              <div class="card mb-3">
+                <div class="row g-0">
                 <div class="col-md-6 img-holder">
-                  <img src="images/first-card.png" class="img-fluid rounded-start" alt="firstcardimg">
+                    <img src="images/third-card.png" class="img-fluid rounded-start" alt="firstcardimg">
                 </div>
                 <div class="col-md-6">
-                  <div class="card-body">
-                    <h2 class="card-title">Tonic</h2>
-                    <p class="CANPOY">CANPOY <span><i class="fa-solid fa-circle"></i></span> <span> Back End Developer</span> <span><i class="fa-solid fa-circle"></i></span> 2022<span></span></p>
-                    <p class="card-text">A daily selection of privately personalized reads; no accounts or sign-ups required.</p>
+                    <div class="card-body">
+                    <h2 class="card-title">Facebook 360</h2>
+                    <p class="CANPOY">FACEBOOK <span><i class="fa-solid fa-circle"></i></span> <span> Back End Developer</span> <span><i class="fa-solid fa-circle"></i></span> 2022<span></span></p>
+                    <p class="card-text">Exploring the future of media in Facebook's first Virtual Reality app; a place to discover and enjoy 360 photos and videos on Gear VR.</p>
                     <div class="tags">
                         <div class="tag">
                             <p>html</p>
@@ -159,34 +161,39 @@
                             <p>CSS</p>
                         </div>
                         <div class="tag">
+                            <p>Ruby on rails</p>
+                        </div>
+                        <div class="tag">
                             <p>javaScript</p>
                         </div>
                     </div>
                     <div class="action">
-                        <button type="button" class="btn btn-outline-primary">See Project</button>
+                        <button class="btn btn-primary" type="submit">See Project</button>
                     </div>
-                  </div>
+                    </div>
                 </div>
-              </div>
+                </div>
             </div>
 
+
+               
 <!-- Card 4-->
         <div class="card mb-3">
           <div class="row g-0">
-            <div class="col-md-6 img-holder">
-              <img src="images/first-card.png" class="img-fluid rounded-start" alt="firstcardimg">
-            </div>
             <div class="col-md-6">
               <div class="card-body">
-                <h2 class="card-title">Tonic</h2>
-                <p class="CANPOY">CANPOY <span><i class="fa-solid fa-circle"></i></span> <span> Back End Developer</span> <span><i class="fa-solid fa-circle"></i></span> 2022<span></span></p>
-                <p class="card-text">A daily selection of privately personalized reads; no accounts or sign-ups required.</p>
+                <h2 class="card-title">Uber Navigation</h2>
+                <p class="CANPOY">Uber <span><i class="fa-solid fa-circle"></i></span> <span> Back End Developer</span> <span><i class="fa-solid fa-circle"></i></span> 2022<span></span></p>
+                <p class="card-text">A smart assistant to make driving more safe, efficient, and fun by unlocking your most expensive computer: your car.</p>
                 <div class="tags">
                     <div class="tag">
                         <p>html</p>
                     </div>
                     <div class="tag">
                         <p>CSS</p>
+                    </div>
+                    <div class="tag">
+                        <p>Ruby on rails</p>
                     </div>
                     <div class="tag">
                         <p>javaScript</p>
@@ -197,12 +204,93 @@
                 </div>
               </div>
             </div>
+            <div class="col-md-6 img-holder">
+                <img src="images/fourth-card.png" class="card-img img-fluid rounded-start" alt="firstcardimg">
+              </div>
           </div>
         </div>
 
 
         </div>
     </section>
+
+    <section class="section-3" >
+        <div class="container-fluid">
+            <div class="row">
+            <div class="col-lg-6">
+                <div class="third-section-text">
+                    <div class="third-title">
+                        <h1 class="about-my-self">About 
+                            Myself</h1>
+                    </div>
+                    <div class="third-body">
+                        <h2 class="section3-text">Hello I’m a software developer! I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hestiate to contact me.</h2>
+                    </div>
+                    <div class="social-media">
+                        <a class="lets-connect" href="">Lets Connect</a>
+                        <div class="social-buttons social-buttons1">
+                            <ul>
+                              <li>
+                                <a href="" aria-label="twitter-emoji"><i class="emoji emoji-blue emoji1 fa-brands fa-twitter"></i></a>
+                              </li>
+                              <li>
+                                <a href="" aria-label="linkdin-emoji"><i class="emoji emoji-blue fa-brands fa-linkedin"></i></a>
+                              </li>
+                              <li>
+                                <a href="" aria-label="mail-emoji"><i class="emoji mail fa-solid fa-m"></i></a>
+                              </li>
+                              <li>
+                                <a href="" aria-label="github-emoji"><i class="emoji git fa-brands fa-github"></i></a>
+                              </li>
+                              <li>
+                                <a href="" aria-label="handpeace-emoji"><i class="emoji git fa-solid fa-hand-peace"></i></a>
+                              </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <button type="button" class="btn btn-outline-primary">Get My Resume</button>
+                </div>
+            </div>
+            <!-- here -->
+            <div class="col-lg-6">
+              <div class="btn-group">
+                <button type="button" class="btn btn-light dropdown-toggle" data-bs-toggle="dropdown" data-bs-display="static" aria-expanded="false">
+                  Right-aligned but left aligned when large screen
+                </button>
+                <ul class="dropdown-menu dropdown-menu-end dropdown-menu-lg-start">
+                  <li><button class="dropdown-item" type="button">Action</button></li>
+                  <li><button class="dropdown-item" type="button">Another action</button></li>
+                  <li><button class="dropdown-item" type="button">Something else here</button></li>
+                </ul>
+              </div>
+            </div>
+            </div>
+        </div>
+    </div>
+
+    </section>
+
+
+    <section class="section-4">
+      <div class="container-fluid">
+        <div class="row">
+          <div class="contact-me-text">
+            <h1 class="contact-me">Contact me</h1>
+            <h2 class="section4-about">If you have an application you are interested in developing, a feature that you need built or a project that needs coding. I’d love to help with it </h2>
+            <div class="form">
+              <form action="https://formspree.io/f/contact-information" method="post" class="contact-information" id="contact-information" >
+                <input type="input" class="form-control" id="inputPassword2" placeholder="alzubair"> 
+                <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+                <textarea class="form-control" id="exampleFormControlTextarea1" rows="6">write here</textarea>
+                  <button type="submit" class="btn btn-light last-btn">Get in touch</button>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+
+    </section>
+
 
   
 
