--- a/index.html
+++ b/index.html
@@ -253,16 +253,36 @@
             </div>
             <!-- here -->
             <div class="col-lg-6">
-              <div class="btn-group">
-                <button type="button" class="btn btn-light dropdown-toggle" data-bs-toggle="dropdown" data-bs-display="static" aria-expanded="false">
-                  Right-aligned but left aligned when large screen
-                </button>
-                <ul class="dropdown-menu dropdown-menu-end dropdown-menu-lg-start">
-                  <li><button class="dropdown-item" type="button">Action</button></li>
-                  <li><button class="dropdown-item" type="button">Another action</button></li>
-                  <li><button class="dropdown-item" type="button">Something else here</button></li>
-                </ul>
+              <div class="sills-list accordion-flush">
+                <div class="accordion-item">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#first-collapse" aria-expanded="false" aria-controls="flush-collapseOne">
+                      Languages
+                    </button>
+                  <div id="first-collapse" class="accordion-collapse collapse"  data-bs-parent="#accordionFlushExample">
+                    <div class="accordion-body d-flex gap-3">
+                        <img src="images/html.png" alt="html">
+                        <img src="images/css.png" alt="css">
+                        <img src="images/js.png" alt="js">
+                    </div>
+                  </div>
+                </div>
+                <div class="accordion-item">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#second-collapse" aria-expanded="false" aria-controls="flush-collapseTwo">
+                      Frameworks
+                    </button>
+                  <div id="second-collapse" class="accordion-collapse collapse"  data-bs-parent="#accordionFlushExample">
+                  </div>
+                </div>
+                <div class="accordion-item">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#third-collapse" aria-expanded="false" aria-controls="flush-collapseThree">
+                      Skills
+                    </button>
+                  <div id="third-collapse" class="accordion-collapse collapse"  data-bs-parent="#accordionFlushExample">
+                  </div>
+                </div>
               </div>
+        </div>
+    </div>
             </div>
             </div>
         </div>
